@@ -1,6 +1,7 @@
 package seedu.address.storage;
 
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -69,7 +70,9 @@ class JsonAdaptedPerson {
                 .collect(Collectors.toList()));
         meetings.addAll(source.getMeetings().stream()
                 .map(JsonAdaptedMeeting::new)
-                .collect(Collectors.toList()));
+                .toList());
+
+        meetings.sort(Comparator.comparing(JsonAdaptedMeeting::getDate));
     }
 
     /**
